# Logger

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  README.md  version.h.in
test/: CMakeLists.txt  testLog.cpp
